# AntSimulationCMake

./: CMakeLists.txt
src/: main.cpp
src/TaskParallelism/: TaskFarmAnts.cpp  TaskFarmAnts.h
src/graphics/: WindowManager.cpp  WindowManager.h
src/simulation/: AntManager.cpp  AntManager.h
